force-app/main/default/objects/GeneralCost__c/GeneralCost__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{00000000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>