force-app/main/default/objects/GeneralCost__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Common_fee__c</referenceTo>
    <relationshipName>General_Costs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>