force-app/main/default/objects/GeneralCost__c/fields/BusinessTraveler__c.field-meta.xml
<CustomField>
    <fullName>BusinessTraveler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Traveler</label>
    <referenceTo>BusinessTravelers__c</referenceTo>
    <relationshipName>General_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>