force-app/main/default/objects/GeneralCost__c/fields/BusinessTravelRequest__c.field-meta.xml
<CustomField>
    <fullName>BusinessTravelRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Travel Request</label>
    <referenceTo>BusinessTravelRequest__c</referenceTo>
    <relationshipName>General_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>