force-app/main/default/objects/GeneralCost__c/fields/GetRecordType__c.field-meta.xml
<CustomField>
    <fullName>GetRecordType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GetRecordType</label>
    <type>Text</type>
</CustomField>