force-app/main/default/objects/GeneralCost__c/fields/IsBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BAO NK: this is used in flow to check Cost limit before saving</description>
    <label>IsBlocked</label>
    <type>Checkbox</type>
</CustomField>