force-app/main/default/objects/GeneralCost__c/fields/LimitCostofAccommodationperDay__c.field-meta.xml
<CustomField>
    <fullName>LimitCostofAccommodationperDay__c</fullName>
    <formula>PIC__r.Position__r.LimitCostofAccommodationperDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Cost of Accommodation per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>