force-app/main/default/objects/GeneralCost__c/fields/LimitCostofMealperDay__c.field-meta.xml
<CustomField>
    <fullName>LimitCostofMealperDay__c</fullName>
    <formula>PIC__r.Position__r.LimitCostofMealperDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Cost of Meal per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>