force-app/main/default/objects/GeneralCost__c/fields/Pay_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay to Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>General_Costs1</relationshipName>
    <type>Lookup</type>
</CustomField>