force-app/main/default/objects/GeneralCost__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Expense (PIC)</relationshipLabel>
    <relationshipName>General_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>