force-app/main/default/objects/GeneralCost__c/fields/PIC_Flow__c.field-meta.xml
<CustomField>
    <fullName>PIC_Flow__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID(Id),  PIC__r.Name  , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIC Flow</label>
    <type>Text</type>
</CustomField>