force-app/main/default/objects/GeneralCost__c/fields/Repair_Request__c.field-meta.xml
<CustomField>
    <fullName>Repair_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Request</label>
    <referenceTo>Repair_Request__c</referenceTo>
    <relationshipName>General_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>