force-app/main/default/objects/GeneralCost__c/fields/Training_Request__c.field-meta.xml
<CustomField>
    <fullName>Training_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Request</label>
    <referenceTo>Training_request__c</referenceTo>
    <relationshipName>General_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>