force-app/main/default/objects/GeneralCost__c/recordTypes/Business_Travel_Request.recordType-meta.xml
<RecordType>
    <fullName>Business_Travel_Request</fullName>
    <active>true</active>
    <label>Business Travel Request</label>
</RecordType>