force-app/main/default/objects/GeneralCost__c/recordTypes/Repair_Request.recordType-meta.xml
<RecordType>
    <fullName>Repair_Request</fullName>
    <active>true</active>
    <label>Repair Request</label>
</RecordType>