force-app/main/default/objects/GeneralCost__c/recordTypes/Training_Request.recordType-meta.xml
<RecordType>
    <fullName>Training_Request</fullName>
    <active>true</active>
    <label>Training Request</label>
</RecordType>