force-app/main/default/objects/GeneralCost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Training_Request__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>